# FlaskReact

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.example  LOGIN_README.md  README.md  TODO.md  __init__.py  app.py  convertJSON.py  cookies.txt  eval.py  evalBatch.py  iris.py  iris_model_state.pth  path.env  problem.md  pyproject.toml  requirement_explanation.md  requirements.txt  run_app.py  sample.env  simple_server.py  test_class_names.py  test_convert_json.py  test_login.py
.ai/knowledge/: AI2HUMAN.md  README.md
.ai/memory/: README.md
.ai/scripts/: choice_selector.py  http_request.py  procman.py
.github/: copilot-instructions.md  explanation.md
.github/ISSUE_TEMPLATE/: basic_template.md
.github/agents/: folder_specific_agent.md
.github/instructions/: modern.instructions.md  react.instructions.md
.github/prompts/: 1_create_instructions.prompt.md  2_create_readme.prompt.md  3_review.prompt.md  complex_python.prompt.md  modern_python.prompt.md  modernize_python.prompt.md  python_fix.prompt.md  python_review.prompt.md  react.prompt.md  react_fix.prompt.md  react_review.prompt.md  rename_python.prompt.md  review_python.prompt.md  summary.prompt.md
.github/scripts/: generate-ai-review.ps1  generate-ai-review.sh  generate-diff.ps1  generate-diff.sh
.github/workflows/: ai-code-review.yml  copilot-setup-steps.yml  dispatch-ai-code-review.yml  pr-ai-code-review.yml  python-tests.yml  reusable-ai-code-review.yml  test1.yml  test2.yml  test3.yml
.github_copilot_template/agents/: folder_specific.agent.md
data/: .gitignore  README.md
docs/: HUMAN2AI.md  README.md  TODOS.md  langchain.md  mypy.md  pathlib.md  pyprojectTOMLファイルの書き方.md  pytest.md  python実行方法.md  ruff.md  torch.md  uv.md
docs/HUMAN2AI/: CONTEXT.md  GUIDLINE.md  PROMPTS.md  README.md
docs/dev_contract/: 00_INDEX.md  01_プロジェクト構造.md  02_コーディング規約.md  03_データ管理.md  04_テスト戦略.md  05_ドキュメント管理.md  06_Git運用.md  AI系スクリプト.md  GIT.md  INDEX.md  VSCODE設定.md  github_copilot.md  コード品質.md  テスト.md  データ配置.md  ドキュメント.md  フォルダ構造.md
docs/docs_for_llm/: フォルダ構造.md
docs/modernization/: plan.md
docs/new_challenge/: MCP.md
docs/problems/: 01_インフラ・構造.md  02_開発ツール.md  03_機能開発.md  04_品質・自動化.md  AI活用.md  INDEX.md  ISSUE管理.md  label.yaml.example  カスタムスクリプト.md  整理整頓.md  機械学習.md
docs/project_overview/: 00_INDEX.md  01_プロジェクト概要.md  02_開発環境セットアップ.md  03_アプリケーション実行方法.md  04_スクリプト・ツール活用.md  05_AI活用・自動化.md  AIレビュー.md  各種スクリプトの使い方.md
docs/project_tech/: 環境変数読み込み.md
docs/tech_knowledge/: pydoc.md  ruff.md  streamlit.md  uv.md
llm/: README.md  agent.py  document_search_tools.py  functionCalling.py  functionTools.py  function_calling.py  image.py  pdf.py  textSplit.py
llm_mock/: image.py  pdf.py  text_splitter.py
machineLearning/: diabetes.py  eval_batch.py  mlClass.py  ml_class.py  saveUtil.py  save_util.py  showData.py  show_data.py
machineLearning/review/: review_ml_class.md
machineLearning_mock/: eval_batch.py
maikuma/: import.md
param/: models.pth
save/: models.pth
scrape/: beautifulsoup.py
scripts/: generate_pr.ps1  generate_pr.sh
scripts/ai_review/: README.md  ai-review_orchestrator.sh  ai_review_orchestrator.py  config.py  generate-ai-review.sh  generate-diff.sh  generate_ai_review.py  generate_diff.py  generate_pr.sh  pyproject.toml  requirements.txt
scripts/claude_code/: generate_claude_commands.py
scripts/gh/: clean_actions.sh  label.py
scripts/github_copilot/: scripts.sh
scripts/quality_check/: example_checker.py
server/: app.py
src/: flask_entry.py  run_app.py
src/Image/: COMPREHENSIVE_DOCUMENTATION.md  README.md  create_test_dataset.py  evaluate.py
src/config/: __init__.py  _create_paths_file.py  load_setting.py  pahts.ini  paths.py  paths.txt
src/data_util/: csv_plot.py  csv_util.py
src/llm/: README.md  __init__.py  agent.py  document_search_tools.py  function_calling.py  image.py  models.py  pdf.py  simple_call.py
src/machineLearning/: README.md  dataset.py  eval_batch.py  ml_class.py  pipeline.py  save_util.py  show_data.py  simple_nn.py
src/scrape/: beautifulsoup.py
src/server/: __init__.py  app.py  config.py  pages.py  run_app.py
src/services/: image_service.py  iris_service.py  pdf_service.py  text_service.py
src/streamlit/: agent_app.py  machine_learning.py
static/: index.html  login_demo.html
streamlit/: machine_learning.py  simple_app.py
tests/: test_csv_plot.py
util/: __init__.py  convertJSON.py  convert_json.py
util_mock/: convert_json.py
(+305 files in other folders)
