[project]
name = "flaskreact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.1",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "openai-agents>=0.3.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.1",
    "pypdf>=6.1.3",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
    "scikit-learn>=1.7.0",
    "streamlit>=1.48.0",
    "tool>=0.8.0",
    "torch>=2.7.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llm*", "machineLearning*", "util*", "scrape*", "server*"]
exclude = ["data*", "log*", "param*", "scaler*", "static*", "csvLog*", "curveLog*", "experiment*", "maikuma*", "test*", "docs*"]

[tool.uv]
python-preference = "system"

[tool.ruff]
line-length = 88
fix = true
indent-width = 4

[tool.pytest.ini_options]
# Pythonパスに追加するディレクトリ
pythonpath = ["src"]

# テストファイルを探索するディレクトリ
testpaths = ["tests"]

# テストファイルの命名パターン
python_files = ["test_*.py", "*_test.py"]

# テスト関数の命名パターン
python_functions = ["test_*"]

# テストクラスの命名パターン
python_classes = ["Test*"]
